--- a/pom.xml
+++ b/pom.xml
@@ -108,10 +108,10 @@
     	<artifactId>mapper-spring-boot-starter</artifactId>
     	<version>1.1.5</version>
     </dependency> -->
-     <dependency>
+     <!-- <dependency>
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
-    </dependency>
+    </dependency> -->
     <!-- <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
@@ -145,12 +145,12 @@
     	<scope>test</scope>
     </dependency> -->
     
-    <!-- <dependency>
+   <dependency>
     	<groupId>oracle</groupId>
 		<artifactId>ojdbc6</artifactId>
 		<version>1.6</version>
-		<scope>provided</scope>
-    </dependency> -->
+		<!-- <scope>provided</scope> -->
+    </dependency>
     
     <dependency>
     	<groupId>org.apache.cxf</groupId>
