--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,11 +1,27 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kongming
-spring.datasource.username=root
-spring.datasource.password=123
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.max-idle=10
-spring.datasource.max-wait=10000
-spring.datasource.min-idle=5
-spring.datasource.initial-size=5
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kongming
+#spring.datasource.username=root
+#spring.datasource.password=123
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.max-idle=10
+#spring.datasource.max-wait=10000
+#spring.datasource.min-idle=5
+#spring.datasource.initial-size=5
+
+server.jsp-servlet.init-parameters.development=true
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+#spring.datasource.url=jdbc:oracle:thin:@10.232.8.14:1521/jcyjs
+#spring.datasource.username=JKDA_ZZNEW
+#spring.datasource.password=Xyh3613571_zz
+
+spring.datasource.url=jdbc:oracle:thin:@192.168.0.21:1521:orcl
+spring.datasource.username=jkdan
+spring.datasource.password=jkda
+
+#--2\u3001\u6570\u636e\u6e90
+
+server.servlet.context-path=/maven01
+server.servlet.path=/
 
 server.port=8011
 server.session.timeout=10
@@ -15,7 +31,7 @@ mybatis.type-aliases-package=com.code.dao
 mybatis.mapperLocations=classpath:mapper/*.xml
 
 #pageHelper
-pagehelper.helperDialect=mysql
+pagehelper.helperDialect=oracle
 #\u5206\u9875\u53c2\u6570\u5408\u7406\u5316\uff0c\u8bbe\u4e3atrue\u65f6\uff0c\u5f53\u8bf7\u6c42\u9875\u7801\u5927\u4e8e\u6700\u5927\u9875\u6570\u65f6\uff0c\u4ecd\u4f1a\u8fd4\u56de\u6570\u636e\uff0c\u8bbe\u4e3afalse\u65f6\u8fd4\u56de\u7a7a
 pagehelper.reasonable=false
 pagehelper.supportMethodsArguments=true
